--- a/rsvp-db-service.yaml
+++ b/rsvp-db-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodbertg
+  name: mongocvdbertg
   labels:
     app: rsvpdb
 spec:
@@ -9,4 +9,4 @@ spec:
   - port: 27017
     protocol: TCP
   selector:
-    appdb: rsvpdb
+ appdbs: rsvpdbs
