--- a/rsvp-web-service.yaml
+++ b/rsvp-web-service.yaml
@@ -9,7 +9,7 @@ spec:
   ports:
   - name: tcp-31081-5000
     nodePort: 31081
-    port: 5000
+    port: 5001
     protocol: TCP
   selector:
-    app: rsvpd
+    app: rsvpdw
